# quatro

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  quatrowidget.cpp  quatrowidget.h  resources.qrc
